sreeshanth(translation changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@975 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -576,6 +576,7 @@ hi:
   edit_additional_details: "अतिरिक्त विवरण संपादित करें"
   elective: "निर्वाचित"
   elective_group: "इलैक्टिव समूह"
+  message: "संदेश"
   examination_results: "परीक्षा परिणाम"
   fee_status: "शुल्क स्थिति"
   fees_text: "फीस"
