--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1749,6 +1749,9 @@ hi:
   flash_msg9: "परीक्षा का नाम खाली नहीं किया जा सकता है"
   flash_msg10: "नई परीक्षा सफलतापूर्वक बनाया|"
   flash_msg11: "छवि फ़ाइल का आकार बहुत बड़ा है| 250KB की तुलना में कम आकार के साथ एक छवि अपलोड करें|"
+  flash_msg12: "सफल रीसेट छोड़ दो"
+  flash_msg13: "श्रेणी सफलतापूर्वक संपादित|"
+  flash_msg14: "ब्योरे सफलतापूर्वक संपादित|"
 
 #configuration controller translation
   configuration:
@@ -1867,7 +1870,6 @@ hi:
     flash8: "छोड़ आवेदन नष्ट कर दिया"
     flash9: "क्षमा करें! छुट्टी प्रविष्टि के साथ एक छोड़ प्रकार को हटा नहीं सकते"
     flash10: "माफ करना aproved छोड़ हटाया नहीं जा सकता"
-    flash11: "सफल रीसेट छोड़ दो"
     flash12: "विभाग समझदार छोड़ो सफल रीसेट"
 
 #news controller translation
@@ -1938,8 +1940,6 @@ hi:
     flash18: "वित्त लेनदेन सफलतापूर्वक हटाए गए"
     flash19: "कुल शुल्क से अधिक राशि का भुगतान नहीं कर सकते"
     flash20: "डिस्काउंट पहले से ही प्रवेश संख्या के लिए मौजूद है"
-    flash21: "श्रेणी सफलतापूर्वक संपादित|"
-    flash22: "ब्योरे सफलतापूर्वक संपादित|"
     flash23: "राशि के लिए भुगतान किया नकारात्मक नहीं होना चाहिए"
     flash24: "ठीक राशि नकारात्मक नहीं होना चाहिए"
 
