--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -471,7 +471,7 @@ hi:
   total_deduction: "कुल कटौती"
   net_salary: "नेट वेतन"
   id: "पहचान"
-  employee_payslip: "कर्मचारी payslip"
+  employee_payslip: "कर्मचारी वेतन पर्ची"
   reason: "कारण"
   currently_assigned: "वर्तमान में सौंपा"
   no_employee_assigned: "नहीं अभी तक सौंपा कर्मचारियों"
@@ -491,11 +491,11 @@ hi:
   month: "माह"
   edit_category: "संपादित करें श्रेणी"
   salary: "वेतन"
-  monthly_payslip: "मासिक payslip"
+  monthly_payslip: "मासिक वेतन पर्ची"
   personal_details: "व्यक्तिगत विवरण"
   attendance_register: "उपस्थिति पंजी"
   attendance_report: "उपस्थिति रिपोर्ट"
-  approve_payslip: "Payslip स्वीकृत"
+  approve_payslip: "वेतन पर्ची स्वीकृत"
   view_all: "सभी देखें"
   advanced: "उन्नत"
   timetable_text: "समय सारिणी"
@@ -607,12 +607,12 @@ hi:
   save_changes: "परिवर्तन सहेजें"
   student_name: "छात्र का नाम"
   finance_text: "वित्त"
-  department_wise_payslip: "विभाग वार payslip"
+  department_wise_payslip: "विभाग वार वेतन पर्ची"
   employee_no: "कर्मचारी सं|"
   all_departments: "सभी विभागों"
-  payslip_status: "Payslip स्थिति"
+  payslip_status: "वेतन पर्ची स्थिति"
   total_employees: "कुल कर्मचारियों"
-  no_payslip_found: "नहीं payslips पाया|"
+  no_payslip_found: "नहीं वेतन पर्ची पाया|"
   employee_search: "कर्मचारी खोजें"
   new_exam: "नई परीक्षा"
   set_in_common: "आम में सेट"
@@ -680,10 +680,10 @@ hi:
   search_again: "पुनः खोजें"
   reset_leave: "छोड़ो रीसेट"
   reset_employee_leaves: "कर्मचारी पत्तियों रीसेट|"
-  one_click_aprove_payslip: "एक payslip अनुमोदन क्लिक करें"
-  aprove_monthly_payslip: "मासिक payslip स्वीकृत"
+  one_click_aprove_payslip: "एक वेतन पर्ची अनुमोदन क्लिक करें"
+  aprove_monthly_payslip: "मासिक वेतन पर्ची स्वीकृत"
   time_text: "समय"
-  select_payslip_month_year: "चुनें payslip महीना और वर्ष"
+  select_payslip_month_year: "चुनें वेतन पर्ची महीना और वर्ष"
   my_leave_applications: "मेरा छोड़ अनुप्रयोगों"
   select_a_leave_type: "छुट्टी प्रकार का चयन करें"
   signature: "हस्ताक्षर"
@@ -872,7 +872,7 @@ hi:
   fax: "फैक्स"
   employee_name: "कर्मचारी का नाम"
   message1: "कोई कर्मचारी इस श्रेणी के अंतर्गत जोडी गयी"
-  payslip_generated_on: "Payslip पर उत्पन्न"
+  payslip_generated_on: "वेतन पर्ची पर उत्पन्न"
   employee_settings: "कर्मचारी सेटिंग्स"
   employee_department: "कर्मचारी विभाग"
   employee_category: "कर्मचारी श्रेणी"
@@ -895,14 +895,14 @@ hi:
   student_leaving_school: "छात्र छोड़ने स्कूल"
   search_by_name: "नाम से ढूंढें"
   rejected_employee: "अस्वीकृत कर्मचारी"
-  rejected_payslip: "अस्वीकृत payslip"
+  rejected_payslip: "अस्वीकृत वेतन पर्ची"
   joining_info: "जानकारी में शामिल होने के लिए"
   change_password_after_login: "उसमें लॉग इन करने के बाद अपना पासवर्ड में बदलाव करें|"
   kindly_approve: "कृपया इस अनुरोध को स्वीकार"
-  rejected_payslip_regenerated: "अस्वीकृत फिर से उत्पन्न Payslip"
-  payslip_has_been_generated_for: "Payslip किया गया है के लिए फिर से उत्पन्न"
-  payslip_generated: "Payslip उत्पन्न"
-  message_body: "Payslip विशेष माह के लिए उत्पन्न किया गया है| कृपया इस अनुरोध को स्वीकार"
+  rejected_payslip_regenerated: "अस्वीकृत फिर से उत्पन्न वेतन पर्ची"
+  payslip_has_been_generated_for: "वेतन पर्ची किया गया है के लिए फिर से उत्पन्न"
+  payslip_generated: "वेतन पर्ची उत्पन्न"
+  message_body: "वेतन पर्ची विशेष माह के लिए उत्पन्न किया गया है| कृपया इस अनुरोध को स्वीकार"
   salary_slip_for_month: "वेतन महीने के लिए उत्पन्न पर्ची"
   employees_salary_generated_manually: "कर्मचारियों के वेतन जिनकी मैन्युअल रूप से उत्पन्न किया गया था, उनके वेतन पर्ची इस प्रक्रिया द्वारा उत्पन्न किया गया"
   salary_slip_reverted: "वेतन पर्ची महीने के लिए लौट"
@@ -962,9 +962,9 @@ hi:
   employee_leave_management: "कर्मचारी छोड़ो प्रबंधन"
   manage_all_employee_attendance_and_leave: "सभी कर्मचारी उपस्थिति और पत्तियों प्रबंधित"
   create_payslip: "Payslip बनाएँ"
-  create_employee_monthly_payslip: "कर्मचारी मासिक payslips बनाएँ"
+  create_employee_monthly_payslip: "कर्मचारी मासिक वेतन पर्ची बनाएँ"
   search_for_employees: "कर्मचारियों के लिए खोज"
-  view_department_wise_payslip: "देखें विभाग वार payslip"
+  view_department_wise_payslip: "देखें विभाग वार वेतन पर्ची"
   employee_details: "कर्मचारी विवरण"
   manage_attendance: "उपस्थिति प्रबंधित"
   leave_attendance: "छोड़ दो और उपस्थिति"
@@ -999,7 +999,7 @@ hi:
   TimetableView: "समय सारिणी देखें"
   StudentAttendanceRegister: "छात्र उपस्थिति रजिस्टर"
   EmployeeAttendance: "कर्मचारी उपस्थिति"
-  PayslipPowers: "Payslip पॉवर्स"
+  PayslipPowers: "वेतन पर्ची पॉवर्स"
   EmployeeSearch: "कर्मचारी खोजें"
   SMSManagement: "एसएमएस प्रबंधन"
   ManageTimetable: "समय सारिणी प्रबंधित"
@@ -1023,14 +1023,14 @@ hi:
   paragraph: "स्कूल छोड़ने के कर्मचारियों के लिए, इस विकल्प का उपयोग करने के लिए उन्हें सक्रिय कर्मचारियों की सूची से हटाने और उन्हें पूर्व कर्मचारियों की सूची में जगह|"
   employee_subject: "कर्मचारी विषय"
   associate: "सहयोगी"
-  one_click_payslip: "एक क्लिक payslip जनरेटर"
-  one_click_payslip_revert: "एक payslip वापस लौटने क्लिक करें"
-  revert_confirm: "यह सभी महीने आप का चयन () सिस्टम से कर्मचारियों की पूरी payslip रिकॉर्ड हटाना होगा| तुम्हें यकीन है?"
-  link_desc1: "एक कर्मचारी के payslip उत्पन्न"
-  link_desc2: "एक क्लिक payslip पीढ़ी"
-  link_desc3: "एक क्लिक payslip revertion"
-  link_desc4: "खारिज कर कर्मचारी payslips प्रबंधित करें"
-  payslip_generation: "Payslip पीढ़ी"
+  one_click_payslip: "एक क्लिक वेतन पर्ची जनरेटर"
+  one_click_payslip_revert: "एक वेतन पर्ची वापस लौटने क्लिक करें"
+  revert_confirm: "यह सभी महीने आप का चयन () सिस्टम से कर्मचारियों की पूरी वेतन पर्ची रिकॉर्ड हटाना होगा| तुम्हें यकीन है?"
+  link_desc1: "एक कर्मचारी के वेतन पर्ची उत्पन्न"
+  link_desc2: "एक क्लिक वेतन पर्ची पीढ़ी"
+  link_desc3: "एक क्लिक वेतन पर्ची revertion"
+  link_desc4: "खारिज कर कर्मचारी वेतन पर्ची प्रबंधित करें"
+  payslip_generation: "वेतन पर्ची पीढ़ी"
   approved_salary: "स्वीकृत वेतन"
   current_manager: "वर्तमान प्रबंधक"
   new_manager: "नई प्रबंधक"
@@ -1051,7 +1051,7 @@ hi:
   add_edit_employee_grade: "जोड़ें और कर्मचारी ग्रेड संपादित करें"
   add_edit_bank_detail: "जोड़ें और बैंक विवरण संपादित करें"
   add_edit_additional_detail: "कर्मचारी प्रवेश रूपों के लिए अतिरिक्त जानकारी जोड़ें और संपादित करें"
-  payslip_settings: "Payslip सेटिंग्स"
+  payslip_settings: "वेतन पर्ची सेटिंग्स"
   earnings: "कमाई"
   inactivate: "निष्क्रिय बनाना"
   inactivate_confirm: "क्या आप यकीन है कि आप इस श्रेणी को निष्क्रिय करना चाहते हैं?"
@@ -1416,8 +1416,8 @@ hi:
   select_a_fees_category: "का चयन करें फीस श्रेणी"
   select_fees_particulars: "शुल्क ब्योरे का चयन करें"
   total_deductions: "कुल कटौती"
-  payslip_approved: "Payslip मंजूरी दे दी!"
-  payslip_rejected: "Payslip खारिज कर दिया!"
+  payslip_approved: "वेतन पर्ची मंजूरी दे दी!"
+  payslip_rejected: "वेतन पर्ची खारिज कर दिया!"
   expense: "खर्च"
   salary_account: "वेतन खाता"
   direct_expense: "प्रत्यक्ष व्यय"
@@ -1465,8 +1465,8 @@ hi:
   edit_fee_discount: "शुल्क डिस्काउंट संपादित करें"
   edit_liability: "देयता संपादित करें"
   employee_salary_report: "कर्मचारी वेतन रिपोर्ट"
-  payslip_for: "के लिए Payslip"
-  payslip_generated_for: "Payslip के लिए उत्पन्न"
+  payslip_for: "के लिए वेतन पर्ची"
+  payslip_generated_for: "वेतन पर्ची के लिए उत्पन्न"
   create_expense: "व्यय बनाएँ"
   create_new_expense: "नए खर्च बनाता है"
   expenses: "व्यय"
@@ -1517,8 +1517,8 @@ hi:
   create_particulars: "ब्योरे बनाएँ"
   create_fee_discounts: "शुल्क छूट बनाएँ"
   view_for_master_fees_category: "मास्टर शुल्क श्रेणी के लिए देखें"
-  employee_payslips: "कर्मचारी payslips"
-  employee_payslip_reject: "कर्मचारी Payslip अस्वीकार"
+  employee_payslips: "कर्मचारी वेतन पर्ची"
+  employee_payslip_reject: "कर्मचारी वेतन पर्ची अस्वीकार"
   transaction_comparision: "लेनदेन तुलना"
   report_for_the_period_from: "से अवधि के लिए रिपोर्ट"
   fees_account: "खाता शुल्क"
@@ -1534,7 +1534,7 @@ hi:
   select_a_fees_particulars_that: "एक फीस के ब्यौरे का चयन करें कि आप ओवरराइड करना चाहते हैं"
   finance_transactions_view: "वित्त लेनदेन देखें"
   select_year: "वर्ष चुनें"
-  payslip_rejected_for: "Payslip के लिए अस्वीकार कर दिया गया है"
+  payslip_rejected_for: "वेतन पर्ची के लिए अस्वीकार कर दिया गया है"
   does_not_belong_to_batch: "बैच से संबंधित नहीं है"
   does_not_exist: "मौजूद नहीं है"
   fee_submission_date_for: "शुल्क प्रस्तुत करने के लिए तिथि"
@@ -1605,9 +1605,9 @@ hi:
   create_income: "आय बनाएँ"
   monthly_report: "मासिक रिपोर्ट"
   compare_with: "के साथ तुलना करें"
-  view_monthly_payslips: "मासिक payslips देखें"
-  view_payslip: "देखें Payslip"
-  view_employee_monthly_payslip: "कर्मचारी मासिक payslip देखें"
+  view_monthly_payslips: "मासिक वेतन पर्ची देखें"
+  view_payslip: "देखें वेतन पर्ची"
+  view_employee_monthly_payslip: "कर्मचारी मासिक वेतन पर्ची देखें"
   manages_asset: "एसेट का प्रबंध"
   manages_liability: "दायित्व का प्रबंध"
   for_the_period: "अवधि के लिए"
@@ -1836,11 +1836,11 @@ hi:
     flash26: "रिपोर्टिंग प्रबंधक सफलतापूर्वक बदल"
     flash27: "वेतन पर्ची के लिए उत्पन्न"
     flash28: "वेतन पर्ची के लिए पहले से ही उत्पन्न"
-    flash29: "Payslip के लिए हटाए गए"
+    flash29: "वेतन पर्ची के लिए हटाए गए"
     flash30: "छोड़ आवेदन बनाया"
     flash31: "सफलतापूर्वक हटाए गए कर्मचारी!"
     flash32: "सभी रिकॉर्ड कोई कर्मचारी के साथ कर्मचारी के लिए हटा दिया गया है|"
-    flash33: "Payslip अनुमोदित किया गया है"
+    flash33: "वेतन पर्ची अनुमोदित किया गया है"
     flash34: "खिचड़ी भाषा नष्ट कर दिया हो| यह कर्मचारी रिपोर्टिंग प्रबंधक"
     flash35: "बैंक उपलब्ध फ़ील्ड्स"
     flash36: "कोई अतिरिक्त उपलब्ध फ़ील्ड्स"
@@ -1927,7 +1927,7 @@ hi:
     flash5: "कृपया आय के लिए श्रेणी बनाने!"
     flash6: "आय खातों को जोड़ा गया है"
     flash7: "आय सफलतापूर्वक संपादित|"
-    flash8: "Payslip अनुमोदित किया गया है"
+    flash8: "वेतन पर्ची अनुमोदित किया गया है"
     flash9: "श्रेणी बनाई गई है, कृपया श्रेणी के लिए विवरण को जोड़ने"
     flash10: "* के साथ फ़ील्ड रिक्त नहीं हो सकता"
     flash11: "नियत दिनांक समाप्ति तिथि के बाद होना चाहिए"
