--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1850,6 +1850,7 @@ hi:
     flash40: "कर्मचारी ग्रेड कठबोली अद्यतन किया जा"
     flash41: "कर्मचारी वर्तमान समय सारिणी में एक ही विषय को सौंपा है"
     flash42: "समय सारिणी inorder में एक और कर्मचारी असाइन करने के लिए इस संघ को दूर करें"
+    flash43: "कोई कर्मचारी इस विभाग में नहीं पाए जाते हैं"
 
 #payroll translation
   payroll:
