--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -723,8 +723,8 @@ es: # locale
   employee_profile: "Perfil de los empleados"
   contact: "Contacto"
   personal: "Personal"
-  bank_info: "Banco de Información"
-  additional_info: "Información adicional"
+  bank_info: "Banco de Info"
+  additional_info: "Info adicional"
   leaves: "Hojas"
   student_info: "Estudiantes info"
   fee_collection_name: "Cuota Nombre de la colección"
