added dependecy check on employee permenant delete #971
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1037 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1853,6 +1853,7 @@ en: # locale
     flash41: "The employee is currently assigned to same subject in timetable"
     flash42: "Please assign another employee in timetable inorder to remove this association"
     flash43: "No employees found in this department"
+    flash44: "Cannot delete the employee when dependecy exists. Use change to former option"
 
 #payroll translation
   payroll:
