--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -962,7 +962,7 @@ hi:
   manage_all_employee: "सभी कर्मचारी प्रबंधित"
   employee_leave_management: "कर्मचारी छोड़ो प्रबंधन"
   manage_all_employee_attendance_and_leave: "सभी कर्मचारी उपस्थिति और पत्तियों प्रबंधित"
-  create_payslip: "Payslip बनाएँ"
+  create_payslip: "वेतन पर्ची बनाएँ"
   create_employee_monthly_payslip: "कर्मचारी मासिक वेतन पर्ची बनाएँ"
   search_for_employees: "कर्मचारियों के लिए खोज"
   view_department_wise_payslip: "देखें विभाग वार वेतन पर्ची"
@@ -991,7 +991,7 @@ hi:
   ManageNews: "समाचार प्रबंधित"
   Timetable: "समय सारिणी"
   StudentAttendanceView: "छात्र उपस्थिति देखें"
-  HrBasics: "Hr मूल बातें"
+  HrBasics: "मानव संसाधन मूल बातें"
   AddNewBatch: "नया बैच जोड़ें"
   SubjectMaster: "विषय मास्टर"
   EventManagement: "आकस्मिकता प्रबंध"
