bug fixed=> nice title mistake in dashboard
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1063 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1198,8 +1198,8 @@ en: # locale
   user_information: "User Information"
   privilege: "privilege"
   to_dashboard: "to Fedena dashboard"
-  admission_link_title: "Enter a Students admision details into the school records."
-  student_link_title: "Search for an existing and former student records."
+  admission_link_title: "Enter students admission details into the school records."
+  student_link_title: "Search for existing and former students."
   user_link_title: "         Manage Users         "
   news_link_title: "View or publish latest school news and announcements"
   exam_link_title: "See examination details and results"
