#850 3rd part only English & Spanish
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1074 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -153,6 +153,9 @@ en: # locale
       employee_attendance:
         employee_id: "Employee"
         employee_leave_type_id: "Employee Leave Type"
+        reason: "Reason"
+        attendance_date: "Attendance Date"
+        employee_attendance: "Employee Attendance"
 
       employee_category:
         name: "Name"
