#849 with year,month & active,inactive & CSS change for salary-->payroll on Spanish translation overflow.
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1100 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1741,6 +1741,8 @@ en: # locale
   partial: "partial"
   student_category_updated_succesfully: "Student category updated succesfully"
   student_category_deleted_succesfully: "Student category deleted succesfully"
+  years: "Years"
+  months: "Months"
 
   flash_msg1: "Updated additional exam group successfully."
   flash_msg2: "Sorry"
