sreeshanth(translation issues)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1132 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1743,6 +1743,7 @@ en: # locale
   student_category_deleted_succesfully: "Student category deleted succesfully"
   years: "Years"
   months: "Months"
+  following_pblm_occured_while_saving_the_batch: "Following problems occured while saving this batch"
 
   flash_msg1: "Updated additional exam group successfully."
   flash_msg2: "Sorry"
