bug fixed => { translation mistake },  fixes #1078
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1136 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1791,6 +1791,7 @@ ar: # locale
   elective_groups:
     flash1: "المجموعة الاختيارية الجديدة التي تم إنشاؤها."
     flash2: "حذف مجموعة اختيارية."
+    flash3: "مجموعة اختيارية تحديثها بنجاح!"
 
 #subject controller translation
   subjects:
