sreeshanth(translation issues)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1143 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -225,7 +225,7 @@ es: # locale
 
   date:
     formats:
-      default: "%e,%m,%Y"
+      default: "%e-%m-%Y"
       normal: "%B %e, %Y"
       short: "%e. %b"
       month_year: "%B %Y"
