--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -224,7 +224,7 @@ hi:
 
   date:
     formats:
-      default: "%e,%m,%Y"
+      default: "%e-%m-%Y"
       normal: "%B %e, %Y"
       short: "%e. %b"
       month_year: "%B %Y"
