sreeshanth(style issue and translation changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1152 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -52,6 +52,7 @@ en: # locale
 
       event:
         title: "Title"
+        end_time: "End time"
 
       exam:
         start_time: "Start Time"
