sreeshanth(style issue and translation changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1153 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -195,8 +195,8 @@ en: # locale
     errors:
       template:
         header:
-          one: "1 error prohibited this {{model}} from being saved"
-          other: "{{count}} errors prohibited this {{model}} from being saved"
+          one: "1 error prohibited this from being saved"
+          other: "{{count}} errors prohibited this from being saved"
         body: "there were problems with the following fields:"
       messages:
         accepted: "must be accepted"
