--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -194,8 +194,8 @@ hi:
     errors:
       template:
         header:
-          one: "त्रुटि निषिद्ध 1 {{model}} बचाया से किया जा रहा"
-          other: "{{count}} त्रुटियों निषिद्ध {{model}} बचाया से किया जा रहा"
+          one: "त्रुटि निषिद्ध 1 बचाया से किया जा रहा"
+          other: "{{count}} त्रुटियों निषिद्ध बचाया से किया जा रहा"
         body: "निम्नलिखित क्षेत्रों के साथ समस्याओं रहे थे:"
       messages:
         accepted: "स्वीकार किया जाना चाहिए"
