sreeshanth(translation issues)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1159 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -46,6 +46,7 @@ en: # locale
       class_timing:
         name: "Name"
         start_time: "Start time"
+        end_time: "End time"
 
       elective_group:
         name: "name"
