sreeshanth(translation issues)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1162 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,6 +19,9 @@ en: # locale
         password: "password"
         role: "role"
 
+      user_event:
+        user_id: "User"
+
       course:
         course_name: "Course name"
         section_name: "Section name"
