sreeshanth(profile details changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1165 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -729,7 +729,7 @@ es: # locale
   user_privilege: "Privilegios de usuario"
   pay_fees: "Pagar tarifas"
   fees_paid: "Tarifa pagada"
-  details: "Detalles"
+  details: "Información"
   employee_id: "ID del empleado"
   dashboard_text: "Inicio"
   connect: "Conectar"
