sreeshanth(translation changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1171 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1376,7 +1376,7 @@ en: # locale
   add_guardian_details: "Add Guardian Details"
   office: "Office"
   leaving_institution: "Student leaving institution"
-  leaving_institution_message: "'For students leaving the Institution, use this option to remove them from the list of active students and place them in the former students list."
+  leaving_institution_message: "For students leaving the Institution, use this option to remove them from the list of active students and place them in the former students list."
   remove_student_records: "Remove student records"
   remove_student_message: "Completely delete student's records from the Institution's databases. Use this option only if you created the student record by accident and want to remove it completely"
   student_left_message: "Student has left the school"
