sreeshanth(translation changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1173 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -211,6 +211,16 @@ en: # locale
       student_category_fee_collection_discount:
         receiver_id: "Receiver"
 
+      individual_payslip_category:
+        amount: "Amount"
+
+      batch_fee_collection_discount:
+        receiver_id: "Receiver"
+
+      batch_fee_discount:
+        receiver_id: "Receiver"
+        name: "Name"
+
 
     errors:
       template:
